--- a/AXIT templete/css/style.css
+++ b/AXIT templete/css/style.css
@@ -63,6 +63,9 @@ input{
     margin: 0 10%;
     padding: 5%;
 }
+.center-text{
+    text-align: center;
+}
 .dark-text{
     color: rgb(61, 61, 61);
 }
@@ -74,6 +77,11 @@ input{
     font-size: 22px;
     border-radius: 2%;
 }
+.hr-style{
+    width: 80px;
+    margin: 5% 0;
+    border: 1.5px solid rgb(243, 113, 66);
+}
 .orange-bg{
     background-color: rgb(243, 113, 66);
 }
@@ -82,6 +90,10 @@ input{
 }
 .light-bg{
     background-color: #F6F6F6;
+}
+.img-style{
+    width: 100%;
+    box-shadow: 0px 0px 20px 7px #b6b3b3;
 }
 /* custom style */
 nav{
@@ -188,13 +200,13 @@ form button{
     font-size: 18px;
     margin: 15% 0;
 }
+.sub-list{
+    padding: 2% 0;
+    background-color: white;
+}
 .sub-img{
     width: 40%;
     padding: 15% 0;
-}
-.sub-img img{
-    width: 100%;
-    box-shadow: 0px 0px 20px 7px #b6b3b3;
 }
 .sub-para{
     width: 45%;
@@ -203,11 +215,6 @@ form button{
 }
 .sub-para h3{
     font-size: 25px;
-}
-.sub-para hr{
-    width: 15%;
-    margin: 5% 0;
-    border: 1.5px solid rgb(243, 113, 66);
 }
 .sub-para p{
     font-size: 13px;
@@ -219,13 +226,51 @@ form button{
     border-radius: 50%;
     padding: 2%;
     margin-right: 4%;
-    margin-top: 7%;
+    margin-top: 18%;
 }
 .cloud p{
     padding: 0 15%;
+}.standard-sec{
+    padding: 7% 0;
+    padding-bottom: 11%;
 }
-
-
-.hhhhh{
-    color: black;
+.standard-para{
+    width: 40%;
+    margin-top: 10%;
+}
+.standard-pic{
+    width: 40%;
+    margin-left: 20%;
+    margin-top: 7%;
+}
+.standard-pic img{
+    height: 300px;
+}
+.awesome-sec{
+    padding: 6% 0;
+}
+.awesome-head{
+    margin-top: 3%;
+}
+.awesome-head hr{
+    margin-left: 45%;
+}
+.awesome-icon{
+    width: 30%;
+}
+.awesome-icon i{
+    color: rgb(243, 113, 66);
+    font-size: 15px;
+    border: 2px solid;
+    border-radius: 50%;
+    padding: 7%;
+    font-size: 25px;
+    margin-top: 17%;
+    margin-bottom: 8%;
+}
+.awesome-icon p{
+    margin: 8% 0;
+}
+.mid-margin{
+    margin: 0 5%;
 }
