--- a/AXIT templete/css/style.css
+++ b/AXIT templete/css/style.css
@@ -45,6 +45,7 @@ html{
 .overlay{
     background-color: rgba(0, 0, 0, 0.74);
     height: 100%;
+    width: 100%;
     padding: 4.5% 0;
 }
 .button-style{
@@ -79,7 +80,7 @@ input{
 }
 .hr-style{
     width: 80px;
-    margin: 5% 0;
+    margin: 4% 0;
     border: 1.5px solid rgb(243, 113, 66);
 }
 .orange-bg{
@@ -91,9 +92,22 @@ input{
 .light-bg{
     background-color: #F6F6F6;
 }
+.white-bg{
+    background-color: white;
+}
 .img-style{
     width: 100%;
     box-shadow: 0px 0px 20px 7px #b6b3b3;
+}
+.hr-center{
+    margin-left: 45%;
+}
+.mid-margin{
+    margin: 0 5%;
+}
+.head-card{
+    text-align: center;
+    padding: 5% 0;
 }
 /* custom style */
 nav{
@@ -249,12 +263,6 @@ form button{
 .awesome-sec{
     padding: 6% 0;
 }
-.awesome-head{
-    margin-top: 3%;
-}
-.awesome-head hr{
-    margin-left: 45%;
-}
 .awesome-icon{
     width: 30%;
 }
@@ -271,6 +279,145 @@ form button{
 .awesome-icon p{
     margin: 8% 0;
 }
-.mid-margin{
-    margin: 0 5%;
+.price-form{
+    width: 30%;
+    margin-top: 2%;
+    margin-bottom: 5%;
+}
+.price-form label{
+    display: block;
+    width: 100%;
+    border: 1px solid #b6b3b3;
+    margin: 1px 0;
+    border: none;
+    padding: 5%;
+}
+.d-sign{
+    font-size: 25px;
+}
+.first-digit{
+    font-size: 50px;
+}
+.second-digit{
+    font-size: 40px;
+}
+#empty-label1{
+    padding: 1%;
+    margin:0;
+}
+#empty-label2{
+    padding: 1%;
+    margin:0;
+}
+#dark-label1{
+    margin-bottom: 0;
+}
+#dark-label2{
+    margin-bottom: 0;
+}
+.basic{
+    margin-top: 6%;
+}
+.text-card{
+    width: 25%;
+    padding: 1%;
+    margin-left: 8%;
+    margin-bottom: 0;
+}
+.reviews{
+    padding: 5% 0;
+}
+.triangle {
+    width: 20%;
+    font-size: 30px;
+    margin-top: 0;
+    padding: 0;
+    color: #b6b3b3;
+    box-sizing: border-box;
+}
+.triangle1{
+    margin-left: 10%;
+}
+.triangle2{
+    margin-left: 13%;
+}
+.triangle3{
+    margin-left: 13%;
+}
+.customer{
+    width: 15%;
+}
+.customer img{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+}
+.jeremy{
+    margin-left: 9%;
+    width: 7%;
+}
+.t-margin{
+    margin-top: 1%;
+}
+.john{
+    margin-left: 19%;
+    width: 7%;
+}
+.susan{
+    margin-left: 19%;
+    width: 7%;
+}
+.stylish-sec{
+    background-image: url(/images/stylish.jpg);
+    background-size: 100% 100%;
+}
+.stylish-text{
+    width: 100%;
+    height: 100;
+}
+.stylish-text hr{
+    border: 1.5px solid white;
+    margin-left: 47%;
+}
+.stylish-text button{
+    margin-top: 2%;
+    padding: 1% 3%;
+}
+.contact-us{
+    padding: 5%;
+}
+.user-data{
+    width: 45%;
+}
+.user-data input{
+    margin-left: 0;
+    padding-left: 0;
+    width: 100%;
+}
+.message-area{
+    width: 45%;
+}
+.message-area textarea{
+    width: 100%;
+    margin: 0 10%;
+    padding: 5%;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid rgb(202, 202, 202);
+}
+.contact-us button{
+    padding: 1.5%;
+    width: 18%;
+    margin-left: 38%;
+}
+footer{
+    background-color: black;
+    padding: 2%;
+}
+footer .social-media{
+    margin-right: 20%;
+    font-size: 25px;
+}
+footer p{
+    margin-top: 1%;
 }
