--- a/AXIT templete/css/style.css
+++ b/AXIT templete/css/style.css
@@ -315,6 +315,12 @@ form button{
 #dark-label2{
     margin-bottom: 0;
 }
+.basic p{
+    font-size: 13px;
+}
+.price-form p{
+    font-size: 13px;
+}
 .basic{
     margin-top: 6%;
 }
